--- a/validation.html
+++ b/validation.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" crossorigin href="style.css">
 </head>
 <body>
-  <form action="https://submit-form.com/6Yv6O7BgX" method="post">
+  <form action="https://submit-form.com/yWhwcRAyH" method="post">
     <input
       type="hidden"
       name="_redirect"
